refactor: usando lambda e replace em algumas instruções